# renextract-v2

./: .env.example  .envrc  .gitignore  .prettierignore  .prettierrc  0001-sparkles-Finished-implemente-backup-tab.patch  0002-lipstick-Add-button-Restor-to-for-backup-tab.patch  IMPLEMENTATION_EXTRACTION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SYNC_TEST.md  UPDATE_CONFIG.md  app.py  app.spec  backup_manager.py  build.bat  build_exe.py  dev.py  eslint.config.cjs  file_dialog.py  hybrid_dialog.py  index.html  install-zenity.sh  package.json  pnpm-lock.yaml  pylint  pyproject.toml  requirements.txt  run.py  run_extraction_test.py  start_dev.sh  test_nested_extraction.rpy  test_nested_system.py  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: App.svelte  app.css  i18n.ts  main.ts
src/backend/: __init__.py  backup_manager.py  coherence.py  coherence_html.py  config.py  extraction.py  project.py  reconstruction.py  update_manager.py  utils.py
src/backend/api/: __init__.py  coherence_html.py  routes.py
src/backend/core/: __init__.py  coherence.py  extractor.py  project.py  reconstructor.py
src/backend/routes/: __init__.py  backup_routes.py  file_dialog_routes.py  settings_routes.py  translator_routes.py  update_routes.py
src/backend/services/: __init__.py  backup.py  config.py  translator.py  update.py  utils.py
src/components/: AboutModal.svelte  ActionButtons.svelte  Backup.svelte  CoherenceChecker.svelte  CoherenceResults.svelte  CoherenceSettingsModal.svelte  ContentManager.svelte  CustomModal.svelte  Dialog.svelte  DialogActions.svelte  EditorSetup.svelte  Header.svelte  MainEditor.svelte  ProjectSetup.svelte  RouteHeader.svelte  Settings.svelte  SettingsAccess.svelte  SettingsApp.svelte  SettingsExtract.svelte  Sidebar.svelte  ThemeCustomizer.svelte  UpdateManager.svelte  UpdateManagerSettings.svelte  WorkFolders.svelte  WslInfo.svelte
src/dialogs/: file_dialog.py  hybrid_dialog.py  windows_dialog.py
src/lib/: api.ts  constants.ts  editorUtils.ts  i18n.ts  utils.ts
src/locales/: common.json  en.json  fr.json  settings.json
src/routes/: Backups.svelte  ContentManager.svelte  Extractor.svelte  Generator.svelte  NotFound.svelte  Settings.svelte  Tools.svelte  Translator.svelte
src/stores/: app.ts  coherence.ts  extraction.ts  project.ts  reconstruction.ts
